# llvmbzlgen

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  external.bzl  go.mod  go.sum  setup.bzl  shims.bzl
cmakelib/ast/: BUILD.bazel  ast.go  ast_test.go  bindings.go  domain.go  eval.go  parser.go
cmakelib/bindings/: BUILD.bazel  bindings.go  bindings_test.go  stack.go
cmakelib/lexer/: BUILD.bazel  filter.go  lexer.go  lexer_test.go  table.go
cmakelib/lexer/rules/: BUILD.bazel  rules.go  scanner.go
path/: BUILD.bazel  path.go  path_test.go  walker.go
rules/: BUILD.bazel  configure_file.bzl  llvmbuild.bzl
tools/cmakedefines/: BUILD.bazel  cmakedefines.go
tools/cmaketobzl/: BUILD.bazel  cmaketobzl.go
tools/cmaketobzl/path/: BUILD.bazel  path.go  path_test.go
tools/llvmbuildtobzl/: BUILD.bazel  llvmbuildtobzl.go
writer/: BUILD.bazel  marshal.go  marshal_test.go  starlark.go  starlark_test.go
