load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "marshal.go",
        "starlark.go",
    ],
    importpath = "github.com/kythe/llvmbzlgen/writer",
    visibility = ["//visibility:public"],
    deps = ["@org_bitbucket_creachadair_stringset//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "marshal_test.go",
        "starlark_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
