load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ast.go",
        "bindings.go",
        "domain.go",
        "eval.go",
        "parser.go",
    ],
    importpath = "github.com/kythe/llvmbzlgen/cmakelib/ast",
    visibility = ["//visibility:public"],
    deps = [
        "//cmakelib/lexer:go_default_library",
        "@com_github_alecthomas_participle//:go_default_library",
        "@com_github_alecthomas_participle//lexer:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["ast_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//cmakelib/lexer:go_default_library",
        "@com_github_alecthomas_participle//:go_default_library",
        "@com_github_alecthomas_participle//lexer:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
