load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["bindings.go"],
    importpath = "github.com/kythe/llvmbzlgen/cmakelib/bindings",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["bindings_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
