load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "filter.go",
        "lexer.go",
    ],
    importpath = "github.com/kythe/llvmbzlgen/cmakelib/lexer",
    visibility = ["//visibility:public"],
    deps = ["@com_github_alecthomas_participle//lexer:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["lexer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_alecthomas_participle//lexer:go_default_library",
        "@com_github_alecthomas_repr//:go_default_library",
    ],
)
