load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "lexer.go",
        "table.go",
    ],
    importpath = "github.com/kythe/llvmbzlgen/cmakelib/lexer",
    visibility = ["//visibility:public"],
    deps = [
        "//cmakelib/lexer/rules:go_default_library",
        "@com_github_alecthomas_participle//lexer:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["lexer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_alecthomas_participle//lexer:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
