load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")

go_binary(
    name = "cmakedefines",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["cmakedefines.go"],
    importpath = "github.com/kythe/llvmbzlgen/tools/cmakedefines",
    visibility = ["//visibility:private"],
)
