load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmaketobzl.go"],
    importpath = "github.com/kythe/llvmbzlgen/tools/cmaketobzl",
    visibility = ["//visibility:private"],
    deps = [
        "//cmakelib/ast:go_default_library",
        "//cmakelib/bindings:go_default_library",
        "//writer:go_default_library",
    ],
)

go_binary(
    name = "cmaketobzl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
