load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["llvmbuildtobzl.go"],
    importpath = "github.com/kythe/llvmbzlgen/tools/llvmbuildtobzl",
    visibility = ["//visibility:private"],
    deps = [
        "//path:go_default_library",
        "//writer:go_default_library",
        "@com_github_creachadair_ini//:go_default_library",
        "@org_bitbucket_creachadair_stringset//:go_default_library",
    ],
)

go_binary(
    name = "llvmbuildtobzl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
